added the poem section and styling

--- a/index.html
+++ b/index.html
@@ -47,48 +47,43 @@
             <div class="row main-content">
                 <div class="col-md-6">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-xl-5 col-md-12">
                             <div class="image-holder">
                                 <img src="assets/images/pic-ali.jpg" alt="Ali Bahrami Picture" />
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
+                        <div class="col-xl-7 col-md-12">
+                            <div class="poem">
+                                <p>Where ever I live, <br />
+                                    the sky is mine...</p>
+                                <h2 class="name-cite">Sohrab Sepehri</h2>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
+                            <h4>About Me</h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
+                                Full Stack Web Developer with experience in Digital Design and Animation.
+                                <br />
+                                I have gained a Master's degree in Information Technology including a Software
+                                Development major and
+                                recently graduated from Monash University Coding Bootcamp and earned a Full-Stack Web
+                                development certificate, with newly developed skills in bootstrap, React.js, Node.js in
+                                addition to previous skills in HTML, CSS, JavaScript and responsive web design.
+                                <br />
+                                Strong leadership and teamwork skills demonstrated by successfully leading a team of
+                                five
+                                resulting in a High Distinction grade motivates me to confront any challenges
+                                independently or as part of a team in my future professional career.
+                                <br />
+                                Passionate about solving web and software challenges and collaborating with others to
+                                build new web and
+                                software solutions.
+                                <br />
+                                My technical competence in cutting edge web technologies in addition
+                                to self-learning skills make me a strong addition to any web stack position in a web
+                                development team.
                             </p>
                         </div>
                     </div>
