--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="row main-content">
-                <div class="col-md-6">
+                <div class="col-md-6 text-justified">
                     <div class="row">
                         <div class="col-xl-5 col-md-12">
                             <div class="image-holder">
@@ -62,7 +62,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <h4>About Me</h4>
+                            <h4 class="title-h4">About Me</h4>
                             <p>
                                 Full Stack Web Developer with experience in Digital Design and Animation.
                                 <br />
@@ -91,48 +91,38 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
+                            <fieldset>
+                                <legend class="legend">Skills</legend>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                    <li>Bootstrap</li>
+                                    <li>Mobile First Design</li>
+                                    <li>jQuery</li>
+                                    <li>Node.js</li>
+                                    <li>React.js</li>
+                                    <li>MongoDB</li>
+                                    <li>MySQL</li>
+                                </ul>
+                            </fieldset>
                         </div>
                         <div class="col-md-6">
-                            <p>
-
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
+                            <fieldset>
+                                <legend class="legend">Interests</legend>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </fieldset>
                         </div>
                     </div>
                 </div>
