--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="page-header col-xs-12 col-sm-4">
+                <div class="page-header col-md-12">
                     <h3>Home Page</h3>
                 </div>
             </div>
@@ -94,16 +94,19 @@
                             <fieldset>
                                 <legend class="legend">Skills</legend>
                                 <ul>
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>JavaScript</li>
-                                    <li>Bootstrap</li>
-                                    <li>Mobile First Design</li>
-                                    <li>jQuery</li>
-                                    <li>Node.js</li>
-                                    <li>React.js</li>
-                                    <li>MongoDB</li>
-                                    <li>MySQL</li>
+                                    <li class="cool-link">HTML</li>
+                                    <li class="cool-link">CSS</li>
+                                    <li class="cool-link">JavaScript</li>
+                                    <li class="cool-link">Bootstrap</li>
+                                    <li class="cool-link">AJAX</li>
+                                    <li class="cool-link">JSON</li>
+                                    <li class="cool-link">jQuery</li>
+                                    <li class="cool-link">Node.js</li>
+                                    <li class="cool-link">React.js</li>
+                                    <li class="cool-link">MongoDB</li>
+                                    <li class="cool-link">MySQL</li>
+                                    <li class="cool-link">Wordpress</li>
+                                    <li class="cool-link">PHP</li>
                                 </ul>
                             </fieldset>
                         </div>
@@ -111,16 +114,13 @@
                             <fieldset>
                                 <legend class="legend">Interests</legend>
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li class="cool-link">Photograpgy</li>
+                                    <li class="cool-link">Music</li>
+                                    <li class="cool-link">Basketball</li>
+                                    <li class="cool-link">Gaming</li>
+                                    <li class="cool-link">Family</li>
+                                    <li class="cool-link">Movie</li>
+                                    <li class="cool-link">Hiking</li>
                                 </ul>
                             </fieldset>
                         </div>
