--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                 <div class="col-xs-1 col-sm-1">
 
                 </div>
-                <div class="col-xs-11 col-sm-7 window-mode">
+                <div class="col-xs-11 col-md-6 window-mode">
                     <form class="form-horizontal">
                         <div class="form-group">
                             <label for="contactName" class="col-sm-2 control-label">Name</label>
