--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="row main-content">
-                <div class="col-xs-11 col-sm-4 window-mode">
+                <div class="col-xs-11 col-md-4 window-mode">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
                         ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu, interdum
@@ -63,7 +63,7 @@
                         aliquet ex. Mauris posuere.
                     </p>
                 </div>
-                <div class="col-xs-1 col-sm-1">
+                <div class="col-xs-1 col-md-1">
 
                 </div>
                 <div class="col-xs-11 col-md-6 window-mode">
