--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <h4 class="title-h4">About Me</h4>
+                            <h4 class="cool-link">About Me</h4>
                             <p>
                                 Full Stack Web Developer with experience in Digital Design and Animation.
                                 <br />
