--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 </head>
 
@@ -125,6 +128,43 @@
                             </fieldset>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <fieldset>
+                                <legend class="legend">Links</legend>
+                                <div class="icon-anchor">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="assets/documents/resume.pdf" target="_blank">
+                                        Resume
+                                    </a>
+                                </div>
+                                <div class="icon-anchor">
+                                    <i class="fab fa-linkedin"></i>
+                                    <a href="https://www.linkedin.com/in/ali-bahrami-baa87325/" target="_blank">
+                                        LinkedIn
+                                    </a>
+                                </div>
+                                <div class="icon-anchor">
+                                    <i class="fab fa-github"></i>
+                                    <a href="https://github.com/alibahrami633" target="_blank">
+                                        Github
+                                    </a>
+                                </div>
+                                <div class="icon-anchor">
+                                    <i class="fab fa-facebook"></i>
+                                    <a href="https://www.facebook.com/ali.bahrami633" target="_blank">
+                                        Facebook
+                                    </a>
+                                </div>
+                                <div class="icon-anchor">
+                                    <i class="fab fa-twitter"></i>
+                                    <a href="https://twitter.com/AliBahr32339771" target="_blank">
+                                        Twitter
+                                    </a>
+                                </div>
+                            </fieldset>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -132,7 +172,36 @@
     <footer class="fixed-bottom box-shadow-style">
         <div class="container">
             <div class="row">
-                <span>&copy; All Rights Reserved.</span>
+                <div class="col-md-6 left-align">
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/ali-bahrami-baa87325/" target="_blank">
+                            LinkedIn
+                        </a>
+                    </div>
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-github"></i>
+                        <a href="https://github.com/alibahrami633" target="_blank">
+                            Github
+                        </a>
+                    </div>
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-facebook"></i>
+                        <a href="https://www.facebook.com/ali.bahrami633" target="_blank">
+                            Facebook
+                        </a>
+                    </div>
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-twitter"></i>
+                        <a href="https://twitter.com/AliBahr32339771" target="_blank">
+                            Twitter
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6 right-align">
+                    <span>&copy; All Rights Reserved.</span>
+                </div>
+
             </div>
         </div>
     </footer>
