--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top box-shadow-style">
         <div class="container">
             <div class="navbar-header">
+                <img src="assets/images/pic-ali.jpg" alt="Ali Bahrami Picture" />
                 <a href="#" class="navbar-brand">Ali Bahrami</a>
             </div>
             <div>
