more animation in the footer section

--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 </head>
 
@@ -21,6 +23,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top box-shadow-style">
         <div class="container">
             <div class="navbar-header">
+                <img src="assets/images/pic-ali.jpg" alt="Ali Bahrami Picture" />
                 <a href="#" class="navbar-brand">Ali Bahrami</a>
             </div>
             <div>
@@ -29,7 +32,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html"> Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="contact.html">Contact</a>
@@ -47,21 +50,7 @@
             </div>
             <div class="row main-content">
                 <div class="col-xs-11 col-md-4 window-mode">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                        ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu, interdum
-                        aliquet ex. Mauris posuere.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                        ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu, interdum
-                        aliquet ex. Mauris posuere.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                        ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu, interdum
-                        aliquet ex. Mauris posuere.
-                    </p>
+
                 </div>
                 <div class="col-xs-1 col-md-1">
 
@@ -99,7 +88,35 @@
     <footer class="fixed-bottom box-shadow-style">
         <div class="container">
             <div class="row">
-                <span>&copy; All Rights Reserved.</span>
+                <div class="col-md-6 left-align">
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/ali-bahrami-baa87325/" target="_blank">
+                            LinkedIn
+                        </a>
+                    </div>
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-github"></i>
+                        <a href="https://github.com/alibahrami633" target="_blank">
+                            Github
+                        </a>
+                    </div>
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-facebook"></i>
+                        <a href="https://www.facebook.com/ali.bahrami633" target="_blank">
+                            Facebook
+                        </a>
+                    </div>
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-twitter"></i>
+                        <a href="https://twitter.com/AliBahr32339771" target="_blank">
+                            Twitter
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6 right-align">
+                    <span>&copy; All Rights Reserved.</span>
+                </div>
             </div>
         </div>
     </footer>
