--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top box-shadow-style">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top box-shadow-style slide-top">
         <div class="container">
             <div class="navbar-header">
                 <img src="assets/images/pic-ali.jpg" alt="Ali Bahrami Picture" />
@@ -173,7 +173,7 @@
     <footer class="fixed-bottom box-shadow-style">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 left-align">
+                <div class="col-md-6 left-align slide-right">
                     <div class="icon-anchor inline-block">
                         <i class="fab fa-linkedin"></i>
                         <a href="https://www.linkedin.com/in/ali-bahrami-baa87325/" target="_blank">
@@ -199,10 +199,9 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-6 right-align">
+                <div class="col-md-6 right-align slide-left">
                     <span>&copy; All Rights Reserved.</span>
                 </div>
-
             </div>
         </div>
     </footer>
