--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,13 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 </head>
 
@@ -20,6 +23,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top box-shadow-style">
         <div class="container">
             <div class="navbar-header">
+                <img src="assets/images/pic-ali.jpg" alt="Ali Bahrami Picture" />
                 <a href="#" class="navbar-brand">Ali Bahrami</a>
             </div>
             <div>
@@ -28,7 +32,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link active" href="portfolio.html"> Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -152,7 +156,35 @@
     <footer class="fixed-bottom box-shadow-style">
         <div class="container">
             <div class="row">
-                <span>&copy; All Rights Reserved.</span>
+                <div class="col-md-6 left-align">
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/ali-bahrami-baa87325/" target="_blank">
+                            LinkedIn
+                        </a>
+                    </div>
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-github"></i>
+                        <a href="https://github.com/alibahrami633" target="_blank">
+                            Github
+                        </a>
+                    </div>
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-facebook"></i>
+                        <a href="https://www.facebook.com/ali.bahrami633" target="_blank">
+                            Facebook
+                        </a>
+                    </div>
+                    <div class="icon-anchor inline-block">
+                        <i class="fab fa-twitter"></i>
+                        <a href="https://twitter.com/AliBahr32339771" target="_blank">
+                            Twitter
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6 right-align">
+                    <span>&copy; All Rights Reserved.</span>
+                </div>
             </div>
         </div>
     </footer>
