contact page editted

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,8 @@
             </div>
             <div class="row main-content">
                 <div class="col-xs-11 col-md-4 window-mode">
-
+                    <i class="fas fa-street-view"></i>
+                    <span class="icon-anchor ">Melbourne</span>
                 </div>
                 <div class="col-xs-1 col-md-1">
 
