added map to contact page

--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,56 @@
             </div>
             <div class="row main-content">
                 <div class="col-xs-11 col-md-4 window-mode">
-                    <i class="fas fa-street-view"></i>
-                    <span class="icon-anchor ">Melbourne</span>
-                </div>
-                <div class="col-xs-1 col-md-1">
+                    <div>
+                        <fieldset>
+                            <legend class="legend">Links</legend>
+                            <div class="icon-anchor">
+                                <i class="fas fa-file-pdf"></i>
+                                <a href="assets/documents/resume.pdf" target="_blank">
+                                    Resume
+                                </a>
+                            </div>
+                            <div class="icon-anchor">
+                                <i class="fab fa-linkedin"></i>
+                                <a href="https://www.linkedin.com/in/ali-bahrami-baa87325/" target="_blank">
+                                    LinkedIn
+                                </a>
+                            </div>
+                            <div class="icon-anchor">
+                                <i class="fab fa-github"></i>
 
+                                <a href="https://github.com/alibahrami633" target="_blank">
+                                    Github
+                                </a>
+                            </div>
+                            <div class="icon-anchor">
+                                <i class="fab fa-facebook"></i>
+                                <a href="https://www.facebook.com/ali.bahrami633" target="_blank">
+                                    Facebook
+                                </a>
+                            </div>
+                            <div class="icon-anchor">
+                                <i class="fab fa-twitter"></i>
+                                <a href="https://twitter.com/AliBahr32339771" target="_blank">
+                                    Twitter
+                                </a>
+                            </div>
+                        </fieldset>
+                    </div>
+                    <hr>
+                    <div>
+                        <fieldset>
+                            <legend class="legend">Location<i class="fas fa-street-view"></i></legend>
+
+                            <iframe class="map"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805184.6322732749!2d144.49268535040093!3d-37.97123697758661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne%20VIC!5e0!3m2!1sen!2sau!4v1585626492282!5m2!1sen!2sau"
+                                frameborder="0" style="border:0;" allowfullscreen="flase" aria-hidden="false"
+                                tabindex="0"></iframe>
+                        </fieldset>
+                    </div>
                 </div>
+
+                <div class="col-xs-1 col-md-1"></div>
                 <div class="col-xs-11 col-md-6 window-mode">
                     <form class="form-horizontal">
                         <div class="form-group">
