--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <title>Ali Bahrami Home Page</title>
+    <title>Ali Bahrami :: Portfolio</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
