--- a/portfolio.html
+++ b/portfolio.html
@@ -48,106 +48,32 @@
                     <h3>Portfolio</h3>
                 </div>
             </div>
-            <div class="row main-content">
-                <div class="col-md-5 window-mode">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                        <div class="col-md-6">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
+            <div class="main-content">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h4>Projects</h4>
                     </div>
                 </div>
-                <div class="col-md-1">
-
+                <div class="row">
+                    <div class="col-md-5 window-mode">
+                        <h5>Electric Vehicle Charging Station Finder</h5>
+                        <img class="porfolio-image" src="assets/images/evch-finder.png" alt="EVCS Finder" />
+                    </div>
+                    <div class="col-md-1"></div>
+                    <div class="col-md-5 window-mode">
+                        <h5>Workday Scheduler</h5>
+                        <img class="porfolio-image" src="assets/images/workdayScheduler.png" alt="EVCS Finder" />
+                    </div>
                 </div>
-                <div class="col-md-5 window-mode">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                        <div class="col-md-6">
-                            <p>
-
-                            </p>
-                        </div>
+                <div class="row">
+                    <div class="col-md-5 window-mode">
+                        <h5>Weather Dashboard</h5>
+                        <img class="porfolio-image" src="assets/images/weatherDashboard.png" alt="EVCS Finder" />
                     </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris gravida nunc quis risus
-                                ullamcorper placerat vitae suscipit ipsum. Duis est dui, ultricies vel libero eu,
-                                interdum aliquet ex. Mauris posuere.
-                            </p>
-                        </div>
+                    <div class="col-md-1"></div>
+                    <div class="col-md-5 window-mode">
+                        <h5>Random Password Generator</h5>
+                        <img class="porfolio-image" src="assets/images/randomPasswordGenrator.png" alt="EVCS Finder" />
                     </div>
                 </div>
             </div>
