links added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,22 +58,34 @@
                     <div class="col-md-5 window-mode">
                         <h5>Electric Vehicle Charging Station Finder</h5>
                         <img class="porfolio-image" src="assets/images/evch-finder.png" alt="EVCS Finder" />
+                        <a href="https://alibahrami633.github.io/EVCS-Finder/" target="_blank">Demo</a>
+                        <a href="https://github.com/alibahrami633/EVCS-Finder" target="_blank">Github Repository</a>
                     </div>
                     <div class="col-md-1"></div>
                     <div class="col-md-5 window-mode">
                         <h5>Workday Scheduler</h5>
                         <img class="porfolio-image" src="assets/images/workdayScheduler.png" alt="EVCS Finder" />
+                        <a href="https://alibahrami633.github.io/WorkdayScheduler/" target="_blank">Demo</a>
+                        <a href="https://github.com/alibahrami633/WorkdayScheduler" target="_blank">Github
+                            Repository</a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-5 window-mode">
                         <h5>Weather Dashboard</h5>
                         <img class="porfolio-image" src="assets/images/weatherDashboard.png" alt="EVCS Finder" />
+                        <a href="https://alibahrami633.github.io/WeatherDashboard/" target="_blank">Demo</a>
+                        <a href="https://github.com/alibahrami633/WeatherDashboard" target="_blank">Github
+                            Repository</a>
                     </div>
                     <div class="col-md-1"></div>
                     <div class="col-md-5 window-mode">
                         <h5>Random Password Generator</h5>
                         <img class="porfolio-image" src="assets/images/randomPasswordGenrator.png" alt="EVCS Finder" />
+                        <a href="https://alibahrami633.github.io/RandomPasswordGenerator/Develop/"
+                            target="_blank">Demo</a>
+                        <a href="https://github.com/alibahrami633/RandomPasswordGenerator" target="_blank">Github
+                            Repository</a>
                     </div>
                 </div>
             </div>
