color style change

--- a/contact.html
+++ b/contact.html
@@ -11,20 +11,20 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/style.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <link rel="stylesheet" href="assets/style.css">
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top box-shadow-style">
+    <nav class="navbar navbar-expand-md sticky-top box-shadow-style">
         <div class="container">
             <div class="navbar-header">
                 <img src="assets/images/pic-ali.jpg" alt="Ali Bahrami Picture" />
-                <a href="#" class="navbar-brand">Ali Bahrami</a>
+                <a href="index.html" class="navbar-brand">Ali Bahrami</a>
             </div>
             <div>
                 <ul class="nav navbar-nav">
@@ -165,6 +165,7 @@
             </div>
         </div>
     </footer>
+    <div class="bg-cover"></div>
 </body>
 
 </html>
