--- a/portfolio.html
+++ b/portfolio.html
@@ -6,38 +6,44 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Awesome Font -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <!-- Local Style -->
     <link rel="stylesheet" href="assets/style.css">
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md sticky-top box-shadow-style">
+    <nav class="navbar navbar-dark navbar-expand-sm sticky-top box-shadow-style">
         <div class="container">
             <div class="navbar-header">
                 <img src="assets/images/pic-ali.jpg" alt="Ali Bahrami Picture" />
-                <a href="index.html" class="navbar-brand">Ali Bahrami</a>
+                <a href="#" class="navbar-brand">Ali Bahrami</a>
             </div>
             <div>
-                <ul class="nav navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="portfolio.html"> Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="portfolio.html"> Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
@@ -48,53 +54,50 @@
                     <h3>Portfolio</h3>
                 </div>
             </div>
-            <div class="main-content">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h4>Projects</h4>
+            <div class="row main-content">
+                <div class="col-md-12">
+                    <h4>Projects</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 window-mode">
+                    <h5>Electric Vehicle Charging Station Finder</h5>
+                    <img class="porfolio-image" src="assets/images/evch-finder.png" alt="EVCS Finder" />
+                    <div class="project-links">
+                        <a href="https://alibahrami633.github.io/EVCS-Finder/" target="_blank">Demo | </a>
+                        <a href="https://github.com/alibahrami633/EVCS-Finder" target="_blank">Github Repository</a>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-5 window-mode">
-                        <h5>Electric Vehicle Charging Station Finder</h5>
-                        <img class="porfolio-image" src="assets/images/evch-finder.png" alt="EVCS Finder" />
-                        <div class="project-links">
-                            <a href="https://alibahrami633.github.io/EVCS-Finder/" target="_blank">Demo | </a>
-                            <a href="https://github.com/alibahrami633/EVCS-Finder" target="_blank">Github Repository</a>
-                        </div>
-                    </div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-5 window-mode">
-                        <h5>Workday Scheduler</h5>
-                        <img class="porfolio-image" src="assets/images/workdayScheduler.png" alt="EVCS Finder" />
-                        <div class="project-links">
-                            <a href="https://alibahrami633.github.io/WorkdayScheduler/" target="_blank">Demo | </a>
-                            <a href="https://github.com/alibahrami633/WorkdayScheduler" target="_blank">Github
-                                Repository</a>
-                        </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-5 window-mode">
+                    <h5>Workday Scheduler</h5>
+                    <img class="porfolio-image" src="assets/images/workdayScheduler.png" alt="EVCS Finder" />
+                    <div class="project-links">
+                        <a href="https://alibahrami633.github.io/WorkdayScheduler/" target="_blank">Demo | </a>
+                        <a href="https://github.com/alibahrami633/WorkdayScheduler" target="_blank">Github
+                            Repository</a>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-5 window-mode">
-                        <h5>Weather Dashboard</h5>
-                        <img class="porfolio-image" src="assets/images/weatherDashboard.png" alt="EVCS Finder" />
-                        <div class="project-links">
-                            <a href="https://alibahrami633.github.io/WeatherDashboard/" target="_blank">Demo | </a>
-                            <a href="https://github.com/alibahrami633/WeatherDashboard" target="_blank">Github
-                                Repository</a>
-                        </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 window-mode">
+                    <h5>Weather Dashboard</h5>
+                    <img class="porfolio-image" src="assets/images/weatherDashboard.png" alt="EVCS Finder" />
+                    <div class="project-links">
+                        <a href="https://alibahrami633.github.io/WeatherDashboard/" target="_blank">Demo | </a>
+                        <a href="https://github.com/alibahrami633/WeatherDashboard" target="_blank">Github
+                            Repository</a>
                     </div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-5 window-mode">
-                        <h5>Random Password Generator</h5>
-                        <img class="porfolio-image" src="assets/images/randomPasswordGenrator.png" alt="EVCS Finder" />
-                        <div class="project-links">
-                            <a href="https://alibahrami633.github.io/RandomPasswordGenerator/Develop/"
-                                target="_blank"><span>DemDemo | </span></a>
-                            <a href="https://github.com/alibahrami633/RandomPasswordGenerator"
-                                target="_blank"><span>Github
-                                    Repository</span></a>
-                        </div>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-5 window-mode">
+                    <h5>Random Password Generator</h5>
+                    <img class="porfolio-image" src="assets/images/randomPasswordGenrator.png" alt="EVCS Finder" />
+                    <div class="project-links">
+                        <a href="https://alibahrami633.github.io/RandomPasswordGenerator/Develop/"
+                            target="_blank"><span>DemDemo | </span></a>
+                        <a href="https://github.com/alibahrami633/RandomPasswordGenerator" target="_blank"><span>Github
+                                Repository</span></a>
                     </div>
                 </div>
             </div>
@@ -135,7 +138,6 @@
             </div>
         </div>
     </footer>
-    <div class="bg-cover"></div>
 </body>
 
 </html>
