--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="row main-content">
-                <div class="col-md-6 text-justified">
+                <div class="col-md-6">
                     <div class="row">
                         <div class="col-xl-5 col-md-12">
                             <div class="image-holder">
